TigerCompiler/Parsing/TigerParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.4
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.4 C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g 2015-03-04 22:02:58

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


	using System;
	using System.Collections;


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  TigerCompiler.Parsing 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.4")]
[System.CLSCompliant(false)]
public partial class TigerParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ALIAS_TYPE", "AND", "ARRAY", "ARRAY_TYPE", "ASCII", "ASSIGN", "BLOCK_DECLARATIONS", "BREAK", "CALL", "COLON", "COMMA", "DIGIT", "DIV", "DO", "ELSE", "END", "EQ", "EXPRESSIONS_BLOCK", "FIELD_TYPE", "FIELD_VALUE", "FOR", "FUNCTION", "FUNCTIONS_BLOCK", "FUNCTION_DECLARATION", "GETHAN", "GTHAN", "ID", "IF", "IF_THEN", "IF_THEN_ELSE", "IN", "INT", "LCB", "LET", "LETHAN", "LETINEND", "LETTER", "LP", "LSB", "LTHAN", "MINUS", "ML_COMMENTS", "NEGATIVE", "NIL", "NOTEQ", "OF", "OR", "PARAMETERS", "PCHAR", "PERIOD", "PLUS", "PROGRAM", "RCB", "RECORD", "RECORD_TYPE", "RP", "RSB", "SEMI", "STAR", "STRING", "THEN", "TO", "TYPE", "TYPES_BLOCK", "TYPE_DECLARATION", "USCORE", "VAR", "VARIABLES_BLOCK", "VARIABLE_DECLARATION", "WHILE", "WS"
	};
	public const int EOF=-1;
	public const int ALIAS_TYPE=4;
	public const int AND=5;
	public const int ARRAY=6;
	public const int ARRAY_TYPE=7;
	public const int ASCII=8;
	public const int ASSIGN=9;
	public const int BLOCK_DECLARATIONS=10;
	public const int BREAK=11;
	public const int CALL=12;
	public const int COLON=13;
	public const int COMMA=14;
	public const int DIGIT=15;
	public const int DIV=16;
	public const int DO=17;
	public const int ELSE=18;
	public const int END=19;
	public const int EQ=20;
	public const int EXPRESSIONS_BLOCK=21;
	public const int FIELD_TYPE=22;
	public const int FIELD_VALUE=23;
	public const int FOR=24;
	public const int FUNCTION=25;
	public const int FUNCTIONS_BLOCK=26;
	public const int FUNCTION_DECLARATION=27;
	public const int GETHAN=28;
	public const int GTHAN=29;
	public const int ID=30;
	public const int IF=31;
	public const int IF_THEN=32;
	public const int IF_THEN_ELSE=33;
	public const int IN=34;
	public const int INT=35;
	public const int LCB=36;
	public const int LET=37;
	public const int LETHAN=38;
	public const int LETINEND=39;
	public const int LETTER=40;
	public const int LP=41;
	public const int LSB=42;
	public const int LTHAN=43;
	public const int MINUS=44;
	public const int ML_COMMENTS=45;
	public const int NEGATIVE=46;
	public const int NIL=47;
	public const int NOTEQ=48;
	public const int OF=49;
	public const int OR=50;
	public const int PARAMETERS=51;
	public const int PCHAR=52;
	public const int PERIOD=53;
	public const int PLUS=54;
	public const int PROGRAM=55;
	public const int RCB=56;
	public const int RECORD=57;
	public const int RECORD_TYPE=58;
	public const int RP=59;
	public const int RSB=60;
	public const int SEMI=61;
	public const int STAR=62;
	public const int STRING=63;
	public const int THEN=64;
	public const int TO=65;
	public const int TYPE=66;
	public const int TYPES_BLOCK=67;
	public const int TYPE_DECLARATION=68;
	public const int USCORE=69;
	public const int VAR=70;
	public const int VARIABLES_BLOCK=71;
	public const int VARIABLE_DECLARATION=72;
	public const int WHILE=73;
	public const int WS=74;

	public TigerParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public TigerParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return TigerParser.tokenNames; } }
	public override string GrammarFileName { get { return "C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g"; } }


	    public override void ReportError(RecognitionException exc) 
	    {
	        throw new ParsingException(GetErrorMessage(exc, TokenNames), exc);
	    }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_program();
	partial void LeaveRule_program();

	// $ANTLR start "program"
	// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:172:8: public program : x= expror EOF -> ^( PROGRAM $x) ;
	[GrammarRule("program")]
	public AstParserRuleReturnScope<object, IToken> program()
	{
		EnterRule_program();
		EnterRule("program", 1);
		TraceIn("program", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken EOF1 = default(IToken);
		AstParserRuleReturnScope<object, IToken> x = default(AstParserRuleReturnScope<object, IToken>);

		object EOF1_tree = default(object);
		RewriteRuleITokenStream stream_EOF=new RewriteRuleITokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_expror=new RewriteRuleSubtreeStream(adaptor,"rule expror");
		try { DebugEnterRule(GrammarFileName, "program");
		DebugLocation(172, 34);
		try
		{
			// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:173:2: (x= expror EOF -> ^( PROGRAM $x) )
			DebugEnterAlt(1);
			// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:173:4: x= expror EOF
			{
			DebugLocation(173, 6);
			PushFollow(Follow._expror_in_program1066);
			x=expror();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_expror.Add(x.Tree);
			DebugLocation(173, 15);
			EOF1=(IToken)Match(input,EOF,Follow._EOF_in_program1068); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_EOF.Add(EOF1);



			{
			// AST REWRITE
			// elements: x
			// token labels: 
			// rule labels: retval, x
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);
			RewriteRuleSubtreeStream stream_x=new RewriteRuleSubtreeStream(adaptor,"rule x",x!=null?x.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 173:19: -> ^( PROGRAM $x)
			{
				DebugLocation(173, 22);
				// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:173:22: ^( PROGRAM $x)
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(173, 24);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(PROGRAM, "PROGRAM"), root_1);

				DebugLocation(173, 33);
				adaptor.AddChild(root_1, stream_x.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("program", 1);
			LeaveRule("program", 1);
			LeaveRule_program();
		}
		DebugLocation(173, 34);
		} finally { DebugExitRule(GrammarFileName, "program"); }
		return retval;

	}
	// $ANTLR end "program"

	partial void EnterRule_expression_sequence();
	partial void LeaveRule_expression_sequence();

	// $ANTLR start "expression_sequence"
	// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:175:1: expression_sequence : expror ( SEMI ! expror )* ;
	[GrammarRule("expression_sequence")]
	private AstParserRuleReturnScope<object, IToken> expression_sequence()
	{
		EnterRule_expression_sequence();
		EnterRule("expression_sequence", 2);
		TraceIn("expression_sequence", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken SEMI3 = default(IToken);
		AstParserRuleReturnScope<object, IToken> expror2 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> expror4 = default(AstParserRuleReturnScope<object, IToken>);

		object SEMI3_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "expression_sequence");
		DebugLocation(175, 25);
		try
		{
			// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:176:2: ( expror ( SEMI ! expror )* )
			DebugEnterAlt(1);
			// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:176:4: expror ( SEMI ! expror )*
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(176, 4);
			PushFollow(Follow._expror_in_expression_sequence1086);
			expror2=expror();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) adaptor.AddChild(root_0, expror2.Tree);
			DebugLocation(176, 11);
			// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:176:11: ( SEMI ! expror )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==SEMI))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:176:12: SEMI ! expror
					{
					DebugLocation(176, 16);
					SEMI3=(IToken)Match(input,SEMI,Follow._SEMI_in_expression_sequence1089); if (state.failed) return retval;
					DebugLocation(176, 18);
					PushFollow(Follow._expror_in_expression_sequence1092);
					expror4=expror();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) adaptor.AddChild(root_0, expror4.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("expression_sequence", 2);
			LeaveRule("expression_sequence", 2);
			LeaveRule_expression_sequence();
		}
		DebugLocation(176, 25);
		} finally { DebugExitRule(GrammarFileName, "expression_sequence"); }
		return retval;

	}
	// $ANTLR end "expression_sequence"

	partial void EnterRule_expror();
	partial void LeaveRule_expror();

	// $ANTLR start "expror"
	// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:178:1: expror : (x= exprand -> $x) ( options {greedy=true; } : OR y= exprand -> ^( OR $expror $y) )* ;
	[GrammarRule("expror")]
	private AstParserRuleReturnScope<object, IToken> expror()
	{
		EnterRule_expror();
		EnterRule("expror", 3);
		TraceIn("expror", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken OR5 = default(IToken);
		AstParserRuleReturnScope<object, IToken> x = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> y = default(AstParserRuleReturnScope<object, IToken>);

		object OR5_tree = default(object);
		RewriteRuleITokenStream stream_OR=new RewriteRuleITokenStream(adaptor,"token OR");
		RewriteRuleSubtreeStream stream_exprand=new RewriteRuleSubtreeStream(adaptor,"rule exprand");
		try { DebugEnterRule(GrammarFileName, "expror");
		DebugLocation(178, 86);
		try
		{
			// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:179:2: ( (x= exprand -> $x) ( options {greedy=true; } : OR y= exprand -> ^( OR $expror $y) )* )
			DebugEnterAlt(1);
			// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:179:4: (x= exprand -> $x) ( options {greedy=true; } : OR y= exprand -> ^( OR $expror $y) )*
			{
			DebugLocation(179, 4);
			// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:179:4: (x= exprand -> $x)
			DebugEnterAlt(1);
			// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:179:5: x= exprand
			{
			DebugLocation(179, 7);
			PushFollow(Follow._exprand_in_expror1108);
			x=exprand();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_exprand.Add(x.Tree);


			{
			// AST REWRITE
			// elements: x
			// token labels: 
			// rule labels: retval, x
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);
			RewriteRuleSubtreeStream stream_x=new RewriteRuleSubtreeStream(adaptor,"rule x",x!=null?x.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 179:17: -> $x
			{
				DebugLocation(179, 21);
				adaptor.AddChild(root_0, stream_x.NextTree());

			}

			retval.Tree = root_0;
			}
			}

			}

			DebugLocation(179, 24);
			// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:179:24: ( options {greedy=true; } : OR y= exprand -> ^( OR $expror $y) )*
			try { DebugEnterSubRule(2);
			while (true)
			{
				int alt2=2;
				try { DebugEnterDecision(2, false);
				int LA2_0 = input.LA(1);

				if ((LA2_0==OR))
				{
					alt2 = 1;
				}


				} finally { DebugExitDecision(2); }
				switch ( alt2 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:179:51: OR y= exprand
					{
					DebugLocation(179, 51);
					OR5=(IToken)Match(input,OR,Follow._OR_in_expror1128); if (state.failed) return retval; 
					if (state.backtracking == 0) stream_OR.Add(OR5);

					DebugLocation(179, 56);
					PushFollow(Follow._exprand_in_expror1134);
					y=exprand();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) stream_exprand.Add(y.Tree);


					{
					// AST REWRITE
					// elements: expror, y, OR
					// token labels: 
					// rule labels: retval, y
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					if (state.backtracking == 0) {
					retval.Tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);
					RewriteRuleSubtreeStream stream_y=new RewriteRuleSubtreeStream(adaptor,"rule y",y!=null?y.Tree:null);

					root_0 = (object)adaptor.Nil();
					// 179:66: -> ^( OR $expror $y)
					{
						DebugLocation(179, 69);
						// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:179:69: ^( OR $expror $y)
						{
						object root_1 = (object)adaptor.Nil();
						DebugLocation(179, 71);
						root_1 = (object)adaptor.BecomeRoot(stream_OR.NextNode(), root_1);

						DebugLocation(179, 75);
						adaptor.AddChild(root_1, stream_retval.NextTree());
						DebugLocation(179, 83);
						adaptor.AddChild(root_1, stream_y.NextTree());

						adaptor.AddChild(root_0, root_1);
						}

					}

					retval.Tree = root_0;
					}
					}

					}
					break;

				default:
					goto loop2;
				}
			}

			loop2:
				;

			} finally { DebugExitSubRule(2); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("expror", 3);
			LeaveRule("expror", 3);
			LeaveRule_expror();
		}
		DebugLocation(179, 86);
		} finally { DebugExitRule(GrammarFileName, "expror"); }
		return retval;

	}
	// $ANTLR end "expror"

	partial void EnterRule_exprand();
	partial void LeaveRule_exprand();

	// $ANTLR start "exprand"
	// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:181:1: exprand : (x= exprrel -> $x) ( options {greedy=true; } : AND y= exprrel -> ^( AND $exprand $y) )* ;
	[GrammarRule("exprand")]
	private AstParserRuleReturnScope<object, IToken> exprand()
	{
		EnterRule_exprand();
		EnterRule("exprand", 4);
		TraceIn("exprand", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken AND6 = default(IToken);
		AstParserRuleReturnScope<object, IToken> x = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> y = default(AstParserRuleReturnScope<object, IToken>);

		object AND6_tree = default(object);
		RewriteRuleITokenStream stream_AND=new RewriteRuleITokenStream(adaptor,"token AND");
		RewriteRuleSubtreeStream stream_exprrel=new RewriteRuleSubtreeStream(adaptor,"rule exprrel");
		try { DebugEnterRule(GrammarFileName, "exprand");
		DebugLocation(181, 89);
		try
		{
			// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:182:2: ( (x= exprrel -> $x) ( options {greedy=true; } : AND y= exprrel -> ^( AND $exprand $y) )* )
			DebugEnterAlt(1);
			// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:182:4: (x= exprrel -> $x) ( options {greedy=true; } : AND y= exprrel -> ^( AND $exprand $y) )*
			{
			DebugLocation(182, 4);
			// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:182:4: (x= exprrel -> $x)
			DebugEnterAlt(1);
			// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:182:5: x= exprrel
			{
			DebugLocation(182, 7);
			PushFollow(Follow._exprrel_in_exprand1162);
			x=exprrel();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_exprrel.Add(x.Tree);


			{
			// AST REWRITE
			// elements: x
			// token labels: 
			// rule labels: retval, x
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);
			RewriteRuleSubtreeStream stream_x=new RewriteRuleSubtreeStream(adaptor,"rule x",x!=null?x.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 182:17: -> $x
			{
				DebugLocation(182, 21);
				adaptor.AddChild(root_0, stream_x.NextTree());

			}

			retval.Tree = root_0;
			}
			}

			}

			DebugLocation(182, 24);
			// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:182:24: ( options {greedy=true; } : AND y= exprrel -> ^( AND $exprand $y) )*
			try { DebugEnterSubRule(3);
			while (true)
			{
				int alt3=2;
				try { DebugEnterDecision(3, false);
				int LA3_0 = input.LA(1);

				if ((LA3_0==AND))
				{
					alt3 = 1;
				}


				} finally { DebugExitDecision(3); }
				switch ( alt3 )
				{
				case 1:
					DebugEnterAlt(1);
					// C:\\Users\\leandro\\Desktop\\ANTLR Software\\TigerCompiler\\TigerCompiler\\Parsing\\Tiger.g:182:51: AND y= exprrel
					{
					DebugLocation(182, 51);
